--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "733542ed-f533-4c01-9731-6c574cd07eda"
+      "id": "39855071-f84e-4dee-a99a-e0271c05c8e8"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "296026b2-622b-4d0d-8312-daa905b46c1c"
+      "id": "f67d306e-1996-48f5-bedd-81240d68dbac"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "721f5f0b-1a0b-45a1-bb59-570dee24bf05"
+      "id": "32bb3bb4-21d4-4845-8db8-0269243dc8b5"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "ec494f4c-4815-405d-aa38-b0a1d479b8f5"
+      "id": "d7cd2607-c71c-4aa6-8e36-c7f997415151"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "c6628733-5f9c-4b6a-b807-91990234360a"
+      "id": "6d2a1eac-0c2f-4e41-a364-e93d9bfc5864"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "a84053d5-38b2-43fa-b87e-5cc4ec30854e"
+      "id": "95a072cc-09ca-4af5-a9cb-ede136ff796a"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "2efe998c-d2fc-4c42-979d-5620bffbec09"
+      "id": "246ee748-7b5a-4454-9b6d-79bf216f32e4"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "536a0fba-9ebc-4b2f-b855-29b3a069eefa"
+      "id": "cd752c4f-0534-49a8-8c7c-5bdce292a75e"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "149c283d-4857-452c-a5f0-d1c3f168110c"
+      "id": "39727f40-5125-40c6-9451-9af72408ed6c"
     },
     {
       "cell_type": "code",
@@ -385,11 +385,22 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
+        "    v_{11} & v_{12}  \\\\\n",
+        "    v_{21} & v_{22}  \\\\\n",
+        "    \\dots & \\dots  \\\\\n",
+        "    v_{n1} & v_{n2}  \\\\\n",
+        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
+        "    \\begin{bmatrix}\n",
+        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
+        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
+        "    \\dots \\\\\n",
+        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
+        "    \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "3e7664da-87f0-45fb-8493-822af3100ade"
+      "id": "fe2eeabc-249c-4259-a2ef-11a56a08833b"
     },
     {
       "cell_type": "code",
@@ -412,7 +423,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "31b0145f-a7c2-417e-82c7-3121cbd4b5f0"
+      "id": "8bf00fae-f532-4830-80e2-cc095cee9c72"
     },
     {
       "cell_type": "code",
@@ -467,7 +478,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "4fd15cb4-9231-4833-b94b-8062d20fab96"
+      "id": "7e2af055-5021-42de-9766-b5652a54d375"
     },
     {
       "cell_type": "code",
@@ -514,7 +525,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "e3d01f82-34cd-48ae-9736-c79337c01b07"
+      "id": "dfab850c-b629-4190-b56e-cc02ad9f8fad"
     },
     {
       "cell_type": "code",
@@ -553,7 +564,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "85f0eaca-b8d9-478b-afd8-1dfb14a1edfc"
+      "id": "b0370e64-2995-4d21-8d50-6e823b627b01"
     },
     {
       "cell_type": "code",
@@ -622,7 +633,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "2ad8f382-3b30-49b6-af82-cb95febe2c35"
+      "id": "58ac8c71-b99e-4e19-833d-ffcb66bf4d79"
     },
     {
       "cell_type": "code",
@@ -687,7 +698,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "e6a4c314-e865-4926-8f4d-73f073de6417"
+      "id": "4bcb6818-3b3e-4fb1-a592-627170468d3f"
     },
     {
       "cell_type": "code",
