--- a/docs/posts/10wk-2.out.ipynb
+++ b/docs/posts/10wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "967dedbe-2bb7-42b4-94a2-3f617c97d2b7"
+      "id": "14f7008b-7753-44a7-9404-ef940504b39d"
     },
     {
       "cell_type": "code",
@@ -41,7 +41,7 @@
         "\n",
         "`-` 주어진 자료가 아래와 같다고 하자."
       ],
-      "id": "4c32b80f-c818-4233-bf80-037e2e119754"
+      "id": "73f0cafb-7513-473c-80de-e61a2fb7ec24"
     },
     {
       "cell_type": "code",
@@ -87,7 +87,7 @@
       "source": [
         "`-` 문제1: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "c30d362c-cdf4-4246-a439-afe59755837b"
+      "id": "ef4f6616-cae9-4f2a-bbe2-1434d788f20d"
     },
     {
       "cell_type": "code",
@@ -129,7 +129,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "9ecb830c-401a-4917-b8e0-f0349d3860dc"
+      "id": "87df0daf-d2ec-4e41-aa2a-652cd8b0ab7f"
     },
     {
       "cell_type": "code",
@@ -183,7 +183,7 @@
       "source": [
         "`-` 문제2: 아래와 같이 최초의 직선을 생성하였다."
       ],
-      "id": "ae793c4d-89d2-442b-b0b2-7bfcb4b1bcbe"
+      "id": "5dd237e8-498f-462e-9c35-bb6701de3b2e"
     },
     {
       "cell_type": "code",
@@ -226,7 +226,7 @@
         "`torch.optim.SGD`를 이용하여 What을 update하라. 학습률은 0.1로 설정하고\n",
         "30회 update하라."
       ],
-      "id": "ffad23ac-8d4a-4739-b69f-f8cbb519e25b"
+      "id": "68e7b591-3052-4336-b97b-e6ab05ee6197"
     },
     {
       "cell_type": "code",
@@ -286,7 +286,7 @@
         "\n",
         "`-` Data"
       ],
-      "id": "71c7a78e-fb77-4d1a-9279-0c27e1484894"
+      "id": "770c195e-19de-46cf-b59b-ab4d0c7348a5"
     },
     {
       "cell_type": "code",
@@ -339,7 +339,7 @@
         "옥순의I성향$\\times$영식의I성향 $+$ 옥순의N성향$\\times$영식의N성향 $+$\n",
         "옥순의매력 $+$ 영식의매력"
       ],
-      "id": "c5018ac6-cc5e-470d-ae00-4c9d9983bc50"
+      "id": "f533fe63-ee8e-4410-94e6-257b2fec6730"
     },
     {
       "cell_type": "code",
@@ -365,7 +365,7 @@
         "**(2)** 영자(IN)와 다호(ES)의 궁합 $\\approx$ 영자I성향$\\times$다호I성향\n",
         "$+$ 영자N성향$\\times$다호의N성향 $+$ 영자의매력 $+$ 다호의매력"
       ],
-      "id": "0a388ee4-bb36-4870-8b01-acf189caf7f7"
+      "id": "08a77d8f-8fd9-4418-a0ef-374f10a7a115"
     },
     {
       "cell_type": "code",
@@ -391,7 +391,7 @@
         "**(3)** 하니(I)와 영호(IS)의 궁합 $\\approx$ 하니I성향$\\times$영호I성향\n",
         "$+$ 하니N성향$\\times$영호의N성향 $+$ 하니의매력 $+$ 영호의매력"
       ],
-      "id": "605b89f8-73c1-44a2-ae7d-ea399f6af157"
+      "id": "65d93b6b-c6d9-4ffa-9416-a283ced60ab0"
     },
     {
       "cell_type": "code",
@@ -418,7 +418,7 @@
         "\n",
         "`-` 전체 사용자의 설정값"
       ],
-      "id": "fe82fc9b-4b86-4e76-9f6c-44f711bb3f06"
+      "id": "f48c26db-39a1-4fd1-a5af-fc1ac1dbf8f8"
     },
     {
       "cell_type": "code",
@@ -471,7 +471,7 @@
       "source": [
         "`-` 아래의 행렬곱 관찰"
       ],
-      "id": "d9885781-3030-431d-9538-6a4495d4bb13"
+      "id": "295d2412-23f9-421c-aca1-6a47add29938"
     },
     {
       "cell_type": "code",
@@ -491,15 +491,71 @@
       "source": [
         "—저거 따져보자—\n",
         "\n",
-        "${\\bf W} = \\begin{bmatrix} 1.2200 & 0.4900 \\\\ 1.1700 & 0.4400 \\\\ 1.2100 & -0.4500 \\\\ 1.2000 & -0.5000 \\\\ -1.2000 & 0.5100 \\\\ -1.2300 & 0.4800 \\\\ -1.2000 & -0.4800 \\\\ -1.1900 & -0.4900 \\\\ 0.2000 & 0.0000 \\end{bmatrix}$\n",
+        "${\\bf W} = \\begin{bmatrix}\n",
+        "1.2200 & 0.4900 \\\\\n",
+        "1.1700 & 0.4400 \\\\\n",
+        "1.2100 & -0.4500 \\\\\n",
+        "1.2000 & -0.5000 \\\\\n",
+        "-1.2000 & 0.5100 \\\\\n",
+        "-1.2300 & 0.4800 \\\\\n",
+        "-1.2000 & -0.4800 \\\\\n",
+        "-1.1900 & -0.4900 \\\\\n",
+        "0.2000 & 0.0000\n",
+        "\\end{bmatrix}$\n",
         "\n",
-        "${\\bf M}^\\top = \\begin{bmatrix} 1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\ 0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000 \\end{bmatrix}$\n",
+        "${\\bf M}^\\top = \\begin{bmatrix}\n",
+        "1.2000 & 1.2200 & 1.2300 & 1.2100 & -1.2800 & -1.2400 & -1.2000 & -1.2200 \\\\\n",
+        "0.5000 & 0.4500 & -0.7000 & -0.6000 & 0.6000 & 0.5000 & -0.5000 & -0.6000\n",
+        "\\end{bmatrix}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix} 1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\ 1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\ 1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\ 1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\ -1.1850 & -1.2345 & -1.8330 & -1.7580 & 1.8420 & 1.7430 & 1.1850 & 1.1580 \\\\ -1.2360 & -1.2846 & -1.8489 & -1.7763 & 1.8624 & 1.7652 & 1.2360 & 1.2126 \\\\ -1.6800 & -1.6800 & -1.1400 & -1.1640 & 1.2480 & 1.2480 & 1.6800 & 1.7520 \\\\ -1.6730 & -1.6723 & -1.1207 & -1.1459 & 1.2292 & 1.2306 & 1.6730 & 1.7458 \\\\ 0.2400 & 0.2440 & 0.2460 & 0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440 \\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top = \\begin{bmatrix}\n",
+        "1.7090 & 1.7089 & 1.1576 & 1.1822 & -1.2676 & -1.2678 & -1.7090 & -1.7824 \\\\\n",
+        "1.6240 & 1.6254 & 1.1311 & 1.1517 & -1.2336 & -1.2308 & -1.6240 & -1.6914 \\\\\n",
+        "1.2270 & 1.2737 & 1.8033 & 1.7341 & -1.8188 & -1.7254 & -1.2270 & -1.2062 \\\\\n",
+        "1.1900 & 1.2390 & 1.8260 & 1.7520 & -1.8360 & -1.7380 & -1.1900 & -1.1640 \\\\\n",
+        "-1.1850 & -1.2345 & -1.8330 & -1.7580 &  1.8420 &  1.7430 &  1.1850 &  1.1580 \\\\\n",
+        "-1.2360 & -1.2846 & -1.8489 & -1.7763 &  1.8624 &  1.7652 &  1.2360 &  1.2126 \\\\\n",
+        "-1.6800 & -1.6800 & -1.1400 & -1.1640 &  1.2480 &  1.2480 &  1.6800 &  1.7520 \\\\\n",
+        "-1.6730 & -1.6723 & -1.1207 & -1.1459 &  1.2292 &  1.2306 &  1.6730 &  1.7458 \\\\\n",
+        "0.2400 &  0.2440 &  0.2460 &  0.2420 & -0.2560 & -0.2480 & -0.2400 & -0.2440\n",
+        "\\end{bmatrix}$\n",
         "\n",
-        "$\\begin{align*} bias =~& \\begin{bmatrix} 1.2100 \\\\ 1.2500 \\\\ 1.1000 \\\\ 1.1100 \\\\ 1.1200 \\\\ 1.1300 \\\\ 1.1400 \\\\ 1.1200 \\\\ 3.6000 \\end{bmatrix} +\\begin{bmatrix} 1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500 \\end{bmatrix}\\\\ \\\\ =~& \\begin{bmatrix} 2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\ 2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\ 2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\ 2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\ 2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\ 2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\ 4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500 \\end{bmatrix} \\end{align*}$\n",
+        "$\\begin{align*} bias =~& \\begin{bmatrix}\n",
+        "1.2100 \\\\\n",
+        "1.2500 \\\\\n",
+        "1.1000 \\\\\n",
+        "1.1100 \\\\\n",
+        "1.1200 \\\\\n",
+        "1.1300 \\\\\n",
+        "1.1400 \\\\\n",
+        "1.1200 \\\\\n",
+        "3.6000\n",
+        "\\end{bmatrix} +\\begin{bmatrix}\n",
+        "1.2000 & 1.1000 & 1.1100 & 1.2500 & 1.1800 & 1.1100 & 1.1500 & 1.1500\n",
+        "\\end{bmatrix}\\\\ \\\\\n",
+        "=~& \\begin{bmatrix}\n",
+        "2.4100 & 2.3100 & 2.3200 & 2.4600 & 2.3900 & 2.3200 & 2.3600 & 2.3600 \\\\\n",
+        "2.4500 & 2.3500 & 2.3600 & 2.5000 & 2.4300 & 2.3600 & 2.4000 & 2.4000 \\\\\n",
+        "2.3000 & 2.2000 & 2.2100 & 2.3500 & 2.2800 & 2.2100 & 2.2500 & 2.2500 \\\\\n",
+        "2.3100 & 2.2100 & 2.2200 & 2.3600 & 2.2900 & 2.2200 & 2.2600 & 2.2600 \\\\\n",
+        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
+        "2.3300 & 2.2300 & 2.2400 & 2.3800 & 2.3100 & 2.2400 & 2.2800 & 2.2800 \\\\\n",
+        "2.3400 & 2.2400 & 2.2500 & 2.3900 & 2.3200 & 2.2500 & 2.2900 & 2.2900 \\\\\n",
+        "2.3200 & 2.2200 & 2.2300 & 2.3700 & 2.3000 & 2.2300 & 2.2700 & 2.2700 \\\\\n",
+        "4.8000 & 4.7000 & 4.7100 & 4.8500 & 4.7800 & 4.7100 & 4.7500 & 4.7500\n",
+        "\\end{bmatrix} \\end{align*}$\n",
         "\n",
-        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix} 4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\ 4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\ 3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\ 3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\ 1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\ 1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\ 0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\ 0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\ 5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060 \\end{bmatrix}$\n",
+        "${\\bf W} @ {\\bf M}^\\top + bias = \\begin{bmatrix}\n",
+        "4.1190 & 4.0189 & 3.4776 & 3.6422 & 1.1224 & 1.0522 & 0.6510 & 0.5776 \\\\\n",
+        "4.0740 & 3.9754 & 3.4911 & 3.6517 & 1.1964 & 1.1292 & 0.7760 & 0.7086 \\\\\n",
+        "3.5270 & 3.4737 & 4.0133 & 4.0841 & 0.4612 & 0.4846 & 1.0230 & 1.0438 \\\\\n",
+        "3.5000 & 3.4490 & 4.0460 & 4.1120 & 0.4540 & 0.4820 & 1.0700 & 1.0960 \\\\\n",
+        "1.1350 & 0.9855 & 0.3970 & 0.6120 & 4.1420 & 3.9730 & 3.4550 & 3.4280 \\\\\n",
+        "1.0940 & 0.9454 & 0.3911 & 0.6037 & 4.1724 & 4.0052 & 3.5160 & 3.4926 \\\\\n",
+        "0.6600 & 0.5600 & 1.1100 & 1.2260 & 3.5680 & 3.4980 & 3.9700 & 4.0420 \\\\\n",
+        "0.6470 & 0.5477 & 1.1093 & 1.2241 & 3.5292 & 3.4606 & 3.9430 & 4.0158 \\\\\n",
+        "5.0400 & 4.9440 & 4.9560 & 5.0920 & 4.5240 & 4.4620 & 4.5100 & 4.5060\n",
+        "\\end{bmatrix}$\n",
         "\n",
         "`-` ${\\bf W} @ {\\bf M}^\\top + bias$ 의 (1,1)의 원소값을 계산해보면\n",
         "아래와 같다.\n",
@@ -516,7 +572,7 @@
         "\n",
         "`-` 주어진 자료와 우리가 임의로 만든 궁합매트릭스를 비교해보자."
       ],
-      "id": "2f469482-cb72-48ee-a884-800703daae94"
+      "id": "fd025ec1-2312-48f0-82d1-fab8b5aa7039"
     },
     {
       "cell_type": "code",
@@ -636,7 +692,7 @@
         "\n",
         "[6] 1.21+1.11 = 2.32"
       ],
-      "id": "ecff36d4-e0db-47cb-9680-034ca3971b38"
+      "id": "408f8000-6247-4207-a0b1-675209c9bd00"
     },
     {
       "cell_type": "code",
@@ -657,7 +713,7 @@
       "source": [
         "`-` 이름을 숫자화"
       ],
-      "id": "8ac45d0b-dc2f-4c1f-932a-8fa709aeb643"
+      "id": "2eb81674-5873-4f7d-84eb-6815fca6db5b"
     },
     {
       "cell_type": "code",
@@ -692,7 +748,7 @@
       "source": [
         "`-` 텐서화 + one_hot-인코딩"
       ],
-      "id": "2eddb685-f933-40c2-b373-09dc9c4f6028"
+      "id": "a5306582-8c02-45d8-9c7c-184ed98fce8e"
     },
     {
       "cell_type": "code",
@@ -744,7 +800,7 @@
         "`-` `X1` -\\> `여성특징`, `X1` -\\> `여성bias`, `X2` -\\> `남성특징`, `X2`\n",
         "-\\> `남성bias` 구현"
       ],
-      "id": "ecdd9195-49c0-4fd0-974c-486392977237"
+      "id": "cace1712-0c03-44dd-825c-96d0ecd328df"
     },
     {
       "cell_type": "code",
@@ -769,7 +825,7 @@
         "\n",
         "`-` step1: yhat을 구하자."
       ],
-      "id": "9a2205d5-e675-4eb2-aba0-01079580f94e"
+      "id": "dd0d0bd9-defa-4014-9ae4-b1a77ae140fe"
     },
     {
       "cell_type": "code",
@@ -811,7 +867,7 @@
       "source": [
         "`-` step2: 손실계산"
       ],
-      "id": "e7a33183-e0dc-4619-a550-23d42fa9b9fb"
+      "id": "5047c2c8-8ba9-4cf0-b8a7-b2e526ad5b1d"
     },
     {
       "cell_type": "code",
@@ -834,7 +890,7 @@
         "\n",
         "(미분전)"
       ],
-      "id": "71318d90-8979-4ebc-96db-3eddf03cde54"
+      "id": "32aa786e-eb6b-48d7-ba84-1e8454aea479"
     },
     {
       "cell_type": "code",
@@ -866,7 +922,7 @@
       "source": [
         "(미분)"
       ],
-      "id": "de4291d6-7bfb-426e-8740-19d3fa6b07cb"
+      "id": "2fe26f96-0b8e-4aca-8a51-a78381782475"
     },
     {
       "cell_type": "code",
@@ -886,7 +942,7 @@
       "source": [
         "(미분후)"
       ],
-      "id": "1dbe1342-a4f1-4bff-b29c-5cc8d98b72dc"
+      "id": "cf9be131-47c0-4c66-83ab-b23cfb4f324c"
     },
     {
       "cell_type": "code",
@@ -920,7 +976,7 @@
         "\n",
         "(옵티마이저 선언)"
       ],
-      "id": "e766372b-7eaa-4969-88e1-6ce42c37d906"
+      "id": "d2f72f12-e5f7-4770-8148-603d87a07a17"
     },
     {
       "cell_type": "code",
@@ -941,7 +997,7 @@
       "source": [
         "(update전)"
       ],
-      "id": "d37ae13e-8ff0-4624-b2ab-fbefd289b6bb"
+      "id": "e4334fa4-0094-40df-8ae5-d14494067e06"
     },
     {
       "cell_type": "code",
@@ -973,7 +1029,7 @@
       "source": [
         "(update)"
       ],
-      "id": "fa9908aa-f2da-4b81-ba38-045f0b2b0db4"
+      "id": "f31b0f53-5f52-4105-ac9a-c8a7d8c5eea6"
     },
     {
       "cell_type": "code",
@@ -993,7 +1049,7 @@
       "source": [
         "(update후)"
       ],
-      "id": "8780a4ac-8bb7-4bd1-9d01-5d039448d9c8"
+      "id": "5918911a-5251-47b3-a31a-62775a96f33d"
     },
     {
       "cell_type": "code",
@@ -1025,7 +1081,7 @@
       "source": [
         "(zero_grad)"
       ],
-      "id": "81006152-1700-4d06-b647-b5c82961fe3c"
+      "id": "f4284d5d-7b8e-43f2-a90c-f337609083c9"
     },
     {
       "cell_type": "code",
@@ -1045,7 +1101,7 @@
       "source": [
         "(zero_grad후)"
       ],
-      "id": "cc2f460b-9caf-4b37-9431-d6b01d10d0ff"
+      "id": "2e114a58-77b8-41b4-b0d6-d04226f834c1"
     },
     {
       "cell_type": "code",
@@ -1077,7 +1133,7 @@
       "source": [
         "## E. 코드정리"
       ],
-      "id": "8ff1bc62-c5f8-4e05-aadc-c9de76987faa"
+      "id": "2100f8da-bec6-4763-9482-cd8b51ca1504"
     },
     {
       "cell_type": "code",
@@ -1143,7 +1199,7 @@
       "source": [
         "## F. 모형의 해석 – 쉬운경우"
       ],
-      "id": "fe5af092-7b7f-431b-82f6-b8248b60259a"
+      "id": "aabde89a-bfe1-43d6-a9a9-6a918bc1bcb7"
     },
     {
       "cell_type": "code",
@@ -1180,7 +1236,7 @@
         "\n",
         "`-` 적합을 시켜보자."
       ],
-      "id": "44674d83-af96-40ec-a5f9-40a0e453f062"
+      "id": "d0352744-91a4-40ef-9662-ce34f38d0eb0"
     },
     {
       "cell_type": "code",
@@ -1234,7 +1290,7 @@
       "source": [
         "`-` 잘 맞추는듯"
       ],
-      "id": "c249d215-d1a3-4e3d-9c3e-e8b76b1e9943"
+      "id": "06faf251-612a-4a93-a6f3-13cb8cd96ff3"
     },
     {
       "cell_type": "code",
@@ -1254,7 +1310,7 @@
       "source": [
         "`-` 해석을 해보자."
       ],
-      "id": "a51d6157-a359-4be3-a9e2-a44061322497"
+      "id": "2c919165-51d5-4725-b5e7-169980edc5c5"
     },
     {
       "cell_type": "code",
@@ -1294,7 +1350,7 @@
         "-   궁합2: (IN, IN) = 1.4 // (IN, IS) = 0.4 // (IN, EN) = -0.4 // (IN,\n",
         "    ES) = -1.4"
       ],
-      "id": "36ee6a47-bb3c-4d58-8b70-de7915475e2b"
+      "id": "958aeb22-0ffd-40a1-a143-ca140623584d"
     },
     {
       "cell_type": "code",
@@ -1318,7 +1374,7 @@
         "\n",
         "아래의 코드를 활용하여 net를 적합시켜라."
       ],
-      "id": "5b7ca3e8-3fba-490f-857b-30965af7c6bf"
+      "id": "ae6be1e8-8764-4c72-b7d6-d3b7c40258b0"
     },
     {
       "cell_type": "code",
@@ -1372,7 +1428,7 @@
       "source": [
         "적합된 네트워크를 바탕으로 아래의 값에 대한 예측을 수행하라."
       ],
-      "id": "5a160aae-f657-4dbf-a31d-8766274ddc77"
+      "id": "a03c5f11-bd54-483b-b3ee-879bf717a794"
     },
     {
       "cell_type": "code",
@@ -1393,7 +1449,7 @@
       "source": [
         "**hint** 답은 아래와 같다."
       ],
-      "id": "61509be6-9869-4046-acb2-333e5d90a010"
+      "id": "98ab5ea0-492a-4c80-b927-80d6111bd138"
     },
     {
       "cell_type": "code",
