--- a/docs/posts/supp-1.out.ipynb
+++ b/docs/posts/supp-1.out.ipynb
@@ -4,10 +4,10 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "# 06wk-2: 합성곱신경망 (3) – XAI (Class Activation Map, CAM)\n",
+        "# supp-1: 용어정리, 참고문헌\n",
         "\n",
         "최규빈  \n",
-        "2024-04-10\n",
+        "2024-06-29\n",
         "\n",
         "# A1. 자잘한 용어 정리 ($\\star$)\n",
         "\n",
@@ -139,111 +139,9 @@
         "`-` 리눅스관련: <https://guebin.github.io/DSTBX2024/> – 자료 부실함..\n",
         "강의영상 없는것 많음..\n",
         "\n",
-        "# A3. DNN, ANN, MLP\n",
-        "\n",
-        "`-` DNN 은 깊은신경망, ANN 은 인공신경망, MLP 는 다층퍼셉트론이라\n",
-        "번역된다.\n",
-        "\n",
-        "`-` 아래의 네트워크는 ANN이라 볼 수 있다. 또한 레이어가 2개 있으므로\n",
-        "MLP라고 볼 수 있다. DNN 이라 보기는 애매하다. (그래서 이걸\n",
-        "얕은신경망(shallow network)이라고 표현하기도 합니다)\n",
-        "\n",
-        "``` python\n",
-        "net = torch.nn.Sequential(\n",
-        "    torch.nn.Linear(in_features=1,out_features=2),\n",
-        "    torch.nn.ReLU(),\n",
-        "    torch.nn.Linear(in_features=2,out_features=1),\n",
-        "    torch.nn.Sigmoid()\n",
-        ")\n",
-        "```\n",
-        "\n",
-        "`-` 아래의 네트워크는 ANN이라 볼 수 있다. 또한 레이어가 7개 있으므로\n",
-        "MLP라고 볼 수 있다. 이 정도면 깊어보이니까 DNN 이라 주장할 수\n",
-        "있어보인다.\n",
-        "\n",
-        "``` python\n",
-        "net = torch.nn.Sequential(\n",
-        "    torch.nn.Linear(in_features=1,out_features=2),\n",
-        "    torch.nn.ReLU(),\n",
-        "    torch.nn.Linear(in_features=2,out_features=2),\n",
-        "    torch.nn.ReLU(),\n",
-        "    torch.nn.Linear(in_features=2,out_features=2),\n",
-        "    torch.nn.ReLU(),\n",
-        "    torch.nn.Linear(in_features=2,out_features=2),\n",
-        "    torch.nn.ReLU(),\n",
-        "    torch.nn.Linear(in_features=2,out_features=2),\n",
-        "    torch.nn.ReLU(),\n",
-        "    torch.nn.Linear(in_features=2,out_features=2),\n",
-        "    torch.nn.ReLU(),\n",
-        "    torch.nn.Linear(in_features=2,out_features=1),\n",
-        "    torch.nn.Sigmoid(),    \n",
-        ")\n",
-        "```\n",
-        "\n",
-        "`-` 아래의 네트워크는 ANN이라 볼 수 있다. 또한 레이어가 3개 있으므로\n",
-        "MLP라고 볼 수 있다. 이건 DNN이라고 봐야하나? 깊다기 보다는 넓은\n",
-        "신경망인데…\n",
-        "\n",
-        "``` python\n",
-        "net = torch.nn.Sequential(\n",
-        "    torch.nn.Linear(in_features=1,out_features=1048576),\n",
-        "    torch.nn.ReLU(),\n",
-        "    torch.nn.Linear(in_features=1048576,out_features=1048576),\n",
-        "    torch.nn.ReLU(),\n",
-        "    torch.nn.Linear(in_features=1048576,out_features=1),\n",
-        "    torch.nn.Sigmoid(),    \n",
-        ")\n",
-        "```\n",
-        "\n",
-        "`-` 아래의 네트워크도 ANN이라 볼 수 있다.[1] 레이어는 2장이지만 MLP라고\n",
-        "부르진 않는다.\n",
-        "\n",
-        "``` python\n",
-        "net = torch.nn.Sequential(\n",
-        "    torch.nn.Conv2d(1,16,(5,5)), # <-- 학습할 파라메터\n",
-        "    torch.nn.ReLU(),\n",
-        "    torch.nn.MaxPool2d((2,2)),\n",
-        "    torch.nn.Flatten(),\n",
-        "    torch.nn.Linear(2304,1), # <-- 학습할 파라메터\n",
-        "    torch.nn.Sigmoid()\n",
-        ")\n",
-        "```\n",
-        "\n",
-        "`-` 야매개념: 요즘은 거의 ANN $\\approx$ MLP $\\approx$ DNN 의 느낌으로\n",
-        "이해해도 무방함\n",
-        "\n",
-        "-   어지간한 모형은 다 ANN이라 우길 수 있다. 회귀분석도, 로지스틱분석도\n",
-        "    마음먹으면 ANN으로 우길 수 있다. 그래서 “ANN을 썼다”라는건 엄청\n",
-        "    모호한 말이다. 이런 이유로 사람들은 거의 MLP를 쓴 경우에 ANN을\n",
-        "    썼다고 하고, 회귀모형을 쓴 경우에는 굳이 ANN을 썼다고 표현하지\n",
-        "    않는다.\n",
-        "-   MLP과 DNN은 구분이 모호하다. 하나이상의 은닉층만 포함하고 있으면\n",
-        "    MLP라고 부를 수 있다. 적은 노드수를 유지하면서 은닉층을 여러개 쓰면\n",
-        "    깊은 신경망이라고 하고, 많은 노드를 사용하면서 은닉층을 얇게, 그리고\n",
-        "    노드를 많이 쓰면 넓은신경망이라고 한다. 노드수와 관계없이 층이 얇은\n",
-        "    경우는 얕은신경망이라고 한다.[2] 즉 MLP의 모양에 따라서\n",
-        "    “깊은신경망”, “얕은신경망”, “넓은신경망” 등의 용어를 사용한다.\n",
-        "-   일반적으로 은닉층이 1개있으면 얕은신경망, 2개 이상이면\n",
-        "    깊은신경망이라고 부른다고 합의되어있다. (은닉층이 2층까지\n",
-        "    얕은신경망이라고 부르는 사람도 존재함) 얼마나 많은 노드부터\n",
-        "    넓은신경망이라고 부르는지는 (제가 아는 한) 합의된바가 없다. 얼마나\n",
-        "    깊을때 DNN으로 부를지 명확한 합의가 되어있지 않다. (3층-MLP부터\n",
-        "    DNN으로 부르는 방식이 지지를 얻는듯. 그렇지만 4층-MLP 부터 DNN으로\n",
-        "    부르는 사람도 존재함.)\n",
-        "-   MLP의 정의가 가장 깔끔하다고 생각하지만 요즘 잘 쓰는 용어는 아니다.\n",
-        "    (MLP의 논문은 너무 예전임. 층을 세는것도 다름)\n",
-        "-   **제 결론**: 따지고 보자면 DNN $\\subset$ MLP $\\subset$ ANN 이다.\n",
-        "    그렇지만 MLP이지만 DNN은 아닌 네트워크를 지칭한다든가, ANN 이지만\n",
-        "    MLP는 아닌 네트워크를 지칭하는 일은 흔하지 않으며, 지칭하더라도\n",
-        "    부연설명을 친절하게 해준다. 따라서 부연설명 없이 ANN, MLP, DNN 을\n",
-        "    지칭한다면 거의 DNN을 의미한다고 봐도 무방하다. 즉 ANN $\\approx$ MLP\n",
-        "    $\\approx$ DNN 라고 보면 된다. (엄밀하게는 틀린개념이죠)\n",
-        "\n",
-        "[1] 그렇지만 이걸 ANN이라고 부르는 사람은 없는듯\n",
-        "\n",
-        "[2] 저는 이 표현 너무 싫어해요"
+        "`-` 클래스기본: https://guebin.github.io/PP2023/ – `10wk-2` ~ `15wk-2`"
       ],
-      "id": "04a9efde-d93b-40c8-a016-9dd80be1e007"
+      "id": "a5f18fe0-bfbf-45bf-8767-cb7c7d1bc267"
     }
   ],
   "nbformat": 4,
