--- a/docs/posts/11wk-1.out.ipynb
+++ b/docs/posts/11wk-1.out.ipynb
@@ -15,7 +15,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "17eec13c-bf08-4ecf-ab77-8298c42c28b0"
+      "id": "3d39d61d-46a2-43b3-9efc-95c9c9a7e6e7"
     },
     {
       "cell_type": "code",
@@ -35,7 +35,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "7d53c293-6494-485e-8239-b651ae57199f"
+      "id": "7bdf104c-71b5-421c-96b3-dfaad6ed6a82"
     },
     {
       "cell_type": "code",
@@ -62,7 +62,7 @@
         "`-` 모티브: `torch.nn.functional.one_hot` + `torch.nn.Linear` 를 매번\n",
         "쓰는건 너무 귀찮지 않어?"
       ],
-      "id": "d51a47b3-b228-4146-ac7a-7b350e3b581e"
+      "id": "616bfa64-aee2-4d1e-9d1d-3096dd28f8ac"
     },
     {
       "cell_type": "code",
@@ -88,7 +88,7 @@
       "source": [
         "`-` 코드를 뜯어보면.."
       ],
-      "id": "8937c43d-3d85-43d7-b878-b3271a6e2b0b"
+      "id": "0e99f409-5bd3-4390-89e4-934e999997e6"
     },
     {
       "cell_type": "code",
@@ -125,7 +125,7 @@
         "`-` `torch.nn.functional.one_hot` + `torch.nn.Linear` 를 함께처리해주는\n",
         "레이어 `torch.nn.Embedding` 존재"
       ],
-      "id": "6b5f5021-4e07-4e43-be09-fb059ba3d10f"
+      "id": "e0ae70dd-9a5c-4406-824b-7ef76509efbf"
     },
     {
       "cell_type": "code",
@@ -168,7 +168,7 @@
         "`# 의문`: 그냥 원핫인코딩없이 바로 선형변환하면 안되나? (= 꼭\n",
         "임베딩레이어를 써야하나?)"
       ],
-      "id": "969004c7-fee0-43d2-adbe-cf5243ff2089"
+      "id": "b4b95f4d-e23a-4c18-a7e4-6d007ed65721"
     },
     {
       "cell_type": "code",
@@ -220,7 +220,7 @@
         "\n",
         "`-` 수식의 차이: 비슷해보이지만 계산방식이 조금 다름"
       ],
-      "id": "93e94662-0947-4b9d-b0a9-0256f3140be7"
+      "id": "b5683d38-7c7b-4331-bb4e-567b9aa3d4f9"
     },
     {
       "cell_type": "code",
@@ -264,9 +264,11 @@
         "> 만약에 문자열이 “최우수(A)”, “우수(B)”, “보통(C)”, “미흡(D)”,\n",
         "> “매우미흡(F)” 이었다면 특징을 뽑아낼때 linr 가 더 적절했겠죠?\n",
         "\n",
-        "## B. MF-based 추천시스템 재설계"
+        "## B. MF-based 추천시스템 재설계\n",
+        "\n",
+        "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "9acc9eaa-2f21-4450-8fb1-854f9500cbb8"
+      "id": "ad83ba06-5fa9-42f8-b6a1-204f9191ee1d"
     },
     {
       "cell_type": "code",
@@ -297,6 +299,16 @@
         "y = torch.tensor(df_train['y']).float().reshape(-1,1) # (n,1) float vector"
       ],
       "id": "1a5017f3-f863-483a-a894-c63f960aa739"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "임베딩레이어를 활용하여 MF-based 추천시스템을 설계하라.\n",
+        "\n",
+        "(풀이)"
+      ],
+      "id": "ab544d4d-568d-4e28-8ad5-91847d45dcf0"
     },
     {
       "cell_type": "code",
@@ -354,9 +366,9 @@
         "\n",
         "## A. 사용자정의 네트워크 사용법\n",
         "\n",
-        "`# 예비학습1`: net(x)와 사실 net.forward(x)는 같다."
+        "`# 예비학습1`: `net(x)`와 사실 `net.forward(x)`는 같다."
       ],
-      "id": "ae268140-a082-4757-8aec-c9900ca1b165"
+      "id": "a89f4589-3ca5-4f0f-aeda-337696a9e46f"
     },
     {
       "cell_type": "code",
@@ -414,9 +426,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "그래서 net.forward를 재정의하면 net(x)의 기능을 재정의 할 수 있다."
+        "그래서 `net.forward`를 재정의하면 `net(x)`의 기능을 재정의 할 수 있다."
       ],
-      "id": "c5177b62-61c6-4d21-9924-000e0c46ab2f"
+      "id": "ff1a1538-b336-416c-8260-c087d14d5012"
     },
     {
       "cell_type": "code",
@@ -434,12 +446,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "-   “lambda x: 1” 은 입력이 x 출력이 1인 함수를 의미 (즉 입력값에\n",
-        "    상관없이 항상 1을 출력하는 함수)\n",
-        "-   “net.forward = lambda x:1” 이라고 새롭게 선언하였므로 앞으론\n",
-        "    net.forward(x), net(x) 도 입력값에 상관없이 항상 1을 출력하게 될것임"
+        "-   `lambda x: '메롱'` 은 입력이 x 출력이 ’메롱’인 함수를 의미 (즉\n",
+        "    입력값에 상관없이 항상 ’메롱’을 출력하는 함수)\n",
+        "-   `net.forward = lambda x:1` 이라고 새롭게 선언하였므로 앞으론\n",
+        "    `net.forward(x)`, `net(x)` 도 입력값에 상관없이 항상 ’메롱’을\n",
+        "    출력하게 될것임"
       ],
-      "id": "0e0b574c-2f39-401b-a348-2f37cf9d41c2"
+      "id": "5cb772a0-5ca1-4a4c-9a66-3f5ab8ade0c9"
     },
     {
       "cell_type": "code",
@@ -477,7 +490,7 @@
         "\n",
         "(예시1)"
       ],
-      "id": "88172ea7-c939-46b8-b985-7235155c38f6"
+      "id": "19b36470-0736-4588-9952-2461f087f25e"
     },
     {
       "cell_type": "code",
@@ -521,7 +534,7 @@
         "\n",
         "(예시2)"
       ],
-      "id": "6f7cdc81-046a-480d-8399-a18627d19fea"
+      "id": "406388d1-e66b-46a4-bff1-2f2dc4c0aaae"
     },
     {
       "cell_type": "code",
@@ -631,7 +644,7 @@
         "\n",
         "`# 실습`: 사용자정의 네트워크를 사용하여 아래의 자료를 학습해보자."
       ],
-      "id": "a9360bfd-88ae-4cbc-a9b4-f70a6ee0326f"
+      "id": "c15adaed-c620-4e95-9393-ded04ede620d"
     },
     {
       "cell_type": "code",
@@ -675,7 +688,7 @@
       "source": [
         "(풀이)"
       ],
-      "id": "02930ac4-126c-4cf0-ba24-e5d394826e8c"
+      "id": "b4283d8a-0834-47ca-ac41-888e859a1179"
     },
     {
       "cell_type": "code",
@@ -787,11 +800,11 @@
         "\n",
         "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "2dd99459-514f-4da9-a3cc-10d77dfa3a5d"
+      "id": "2f22468f-b4de-44d5-887e-12d74e6e1d52"
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 84,
       "metadata": {
         "tags": []
       },
@@ -804,7 +817,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 85,
       "metadata": {
         "tags": []
       },
@@ -823,15 +836,15 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "사용자정의 네트워크를 이용하여 설계하라.\n",
+        "사용자정의 네트워크를 이용하여 MF-based 추천시스템을 설계하라.\n",
         "\n",
         "(풀이1)"
       ],
-      "id": "ffebf336-01d0-4462-9ba8-e6ca61f2b64b"
+      "id": "48ac56c8-2bc9-4c66-b28f-3efa2647e570"
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": 86,
       "metadata": {
         "tags": []
       },
@@ -859,7 +872,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": 87,
       "metadata": {
         "tags": []
       },
@@ -884,7 +897,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 88,
       "metadata": {
         "tags": []
       },
@@ -900,11 +913,11 @@
       "source": [
         "(풀이2)"
       ],
-      "id": "4261a2ac-a141-4d97-95dd-b30aacfe1f21"
+      "id": "2367c28c-3d95-4c60-a70d-ebdbccc67be2"
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 89,
       "metadata": {
         "tags": []
       },
@@ -917,7 +930,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 59,
+      "execution_count": 90,
       "metadata": {
         "tags": []
       },
@@ -929,7 +942,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 91,
       "metadata": {
         "tags": []
       },
@@ -958,7 +971,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 92,
       "metadata": {
         "tags": []
       },
@@ -983,7 +996,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 62,
+      "execution_count": 93,
       "metadata": {
         "tags": []
       },
@@ -1003,11 +1016,11 @@
         "\n",
         "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "e876c710-bc31-4cf1-8d9b-e3fb9829eca4"
+      "id": "50ccbf63-3e2e-4a45-b23b-2210a2a31c11"
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 94,
       "metadata": {
         "tags": []
       },
@@ -1020,7 +1033,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 95,
       "metadata": {
         "tags": []
       },
@@ -1039,15 +1052,15 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "**소망**: NN-based 모델로 만들어 보고싶다.\n",
+        "NN-based 추천시스템을 설계하라.\n",
         "\n",
         "(풀이1) – 실패"
       ],
-      "id": "61128dbc-4033-42a7-81de-8fa08b61978d"
+      "id": "a680dc62-d945-455d-8765-52dad22f4359"
     },
     {
       "cell_type": "code",
-      "execution_count": 65,
+      "execution_count": 96,
       "metadata": {
         "tags": []
       },
@@ -1061,7 +1074,7 @@
         "        self.b1 = torch.nn.Embedding(9,1)\n",
         "        self.ebdd2 = torch.nn.Embedding(8,2)\n",
         "        self.b2 = torch.nn.Embedding(8,1)\n",
-        "        self.dnn = torch.nn.Sequential(\n",
+        "        self.mlp = torch.nn.Sequential(\n",
         "            torch.nn.Linear(6,1),\n",
         "            torch.nn.Sigmoid()\n",
         "        )   \n",
@@ -1071,14 +1084,14 @@
         "        W_bias = self.b1(X1)\n",
         "        M_bias = self.b2(X2)\n",
         "        Z = torch.concat([W_feature,M_feature,W_bias,M_bias],axis=1)\n",
-        "        yhat = self.dnn(Z) * 5 \n",
+        "        yhat = self.mlp(Z) * 5 \n",
         "        return yhat"
       ],
       "id": "7103a280-dcc4-4d00-950e-fcac841f4312"
     },
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 97,
       "metadata": {
         "tags": []
       },
@@ -1103,7 +1116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 98,
       "metadata": {
         "tags": []
       },
@@ -1121,11 +1134,11 @@
         "\n",
         "(풀이2) – 에라 모르겠다 깊은신경망.."
       ],
-      "id": "f671322d-6102-4450-8885-fa4330f2e89b"
+      "id": "796f7e94-a55f-41a6-a828-7f901fca2a5a"
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 99,
       "metadata": {
         "tags": []
       },
@@ -1139,7 +1152,7 @@
         "        self.b1 = torch.nn.Embedding(9,1)\n",
         "        self.ebdd2 = torch.nn.Embedding(8,2)\n",
         "        self.b2 = torch.nn.Embedding(8,1)\n",
-        "        self.dnn = torch.nn.Sequential(\n",
+        "        self.mlp = torch.nn.Sequential(\n",
         "            torch.nn.Linear(6,15),\n",
         "            torch.nn.ReLU(),\n",
         "            torch.nn.Linear(15,15),\n",
@@ -1153,19 +1166,20 @@
         "        W_bias = self.b1(X1)\n",
         "        M_bias = self.b2(X2)\n",
         "        Z = torch.concat([W_feature,M_feature,W_bias,M_bias],axis=1)\n",
-        "        yhat = self.dnn(Z) * 5 \n",
+        "        yhat = self.mlp(Z) * 5 \n",
         "        return yhat"
       ],
       "id": "eb7b4c62-25c9-43b5-9c23-81023c731113"
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 110,
       "metadata": {
         "tags": []
       },
       "outputs": [],
       "source": [
+        "torch.manual_seed(43052)\n",
         "net = Net()\n",
         "loss_fn = torch.nn.MSELoss()\n",
         "optimizr = torch.optim.Adam(net.parameters(),lr=0.1) # 이게 편해요!!\n",
@@ -1185,7 +1199,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 111,
       "metadata": {
         "tags": []
       },
@@ -1201,11 +1215,11 @@
       "source": [
         "-   잘 맞추긴했는데 불안함"
       ],
-      "id": "8441f300-72e6-4914-8c05-0ce17e8c4dc6"
+      "id": "1799bb2f-2c13-4f76-861c-ef903bc27c7c"
     },
     {
       "cell_type": "code",
-      "execution_count": 71,
+      "execution_count": 112,
       "metadata": {
         "tags": []
       },
@@ -1221,11 +1235,11 @@
       "source": [
         "(영자-다호), (보람-다호), (하니-영호) 를 예측해보자."
       ],
-      "id": "c8c86763-a09d-436b-b3ff-d9279bdbb07a"
+      "id": "f22457e4-29e1-4356-8d21-409f3f3ecfe6"
     },
     {
       "cell_type": "code",
-      "execution_count": 72,
+      "execution_count": 113,
       "metadata": {
         "tags": []
       },
@@ -1238,7 +1252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 114,
       "metadata": {
         "tags": []
       },
@@ -1262,7 +1276,7 @@
         "Tat-Seng Chua. 2017. “Neural Collaborative Filtering.” In *Proceedings\n",
         "of the 26th International Conference on World Wide Web*, 173–82."
       ],
-      "id": "90ff8e51-a1d0-4a84-8a42-f9c5faeeb770"
+      "id": "46dfd66c-05a1-48fd-a12c-8378de135d50"
     }
   ],
   "nbformat": 4,
