--- a/docs/posts/11wk-1-lecture.out.ipynb
+++ b/docs/posts/11wk-1-lecture.out.ipynb
@@ -15,7 +15,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "02cd81bd-7196-41b2-b295-3f56aabfb579"
+      "id": "ad15d816-d032-4e7e-97d1-1147d3713eb9"
     },
     {
       "cell_type": "code",
@@ -35,7 +35,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "47437814-d784-426e-8d78-c920b9145c4a"
+      "id": "70a43c37-1619-49b0-8601-c43b55173532"
     },
     {
       "cell_type": "code",
@@ -119,7 +119,7 @@
         "\n",
         "## B. MF-based 추천시스템 재설계"
       ],
-      "id": "f0c8fbb1-5c14-4a95-bcb1-4962289b0d1e"
+      "id": "2ddcb745-5162-4540-952e-d1a33ffc132b"
     },
     {
       "cell_type": "code",
@@ -171,7 +171,7 @@
         "\n",
         "(예시1)"
       ],
-      "id": "180fdab1-ec92-4707-ad9e-15e971f44540"
+      "id": "ce5e9e8a-018c-4812-8644-60538bb3452d"
     },
     {
       "cell_type": "code",
@@ -215,7 +215,7 @@
         "\n",
         "(예시2)"
       ],
-      "id": "cc5064ef-39ee-4442-9ba1-d0a34bf6429a"
+      "id": "34936c5e-5821-4650-aee5-1e16f8131b38"
     },
     {
       "cell_type": "code",
@@ -325,7 +325,7 @@
         "\n",
         "`# 실습`: 사용자정의 네트워크를 사용하여 아래의 자료를 학습해보자."
       ],
-      "id": "eae79742-238f-4931-b768-70d33fb91e63"
+      "id": "ed603392-bcd9-4c65-88e7-4e3d64a5065e"
     },
     {
       "cell_type": "code",
@@ -375,7 +375,7 @@
         "\n",
         "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "cd4bae57-7bf8-4367-a8c9-0ac811ee988a"
+      "id": "29f25d06-12c4-48b0-8ccf-c4f4242e2309"
     },
     {
       "cell_type": "code",
@@ -413,114 +413,17 @@
       "source": [
         "사용자정의 네트워크를 이용하여 MF-based 추천시스템을 설계하라.\n",
         "\n",
-        "(풀이1)\n",
+        "(풀이1) – `net(X1,X2)`\n",
         "\n",
-        "(풀이2)"
-      ],
-      "id": "e43dcd27-a94d-4152-ba07-eff274d38146"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 58,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "X = torch.stack([X1,X2],axis=1)\n",
-        "X[:5]"
-      ],
-      "id": "a1d5df19-0796-446e-a285-9df9a336f12c"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 59,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "X[:,0], X[:,1]"
-      ],
-      "id": "030d6434-a850-4a63-86f7-33c43dfe6016"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 60,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "class Net(torch.nn.Module):\n",
-        "    def __init__(self):\n",
-        "        super().__init__()\n",
-        "        #--#\n",
-        "        self.ebdd1 = torch.nn.Embedding(9,2)\n",
-        "        self.ebdd2 = torch.nn.Embedding(8,2)\n",
-        "        self.b1 = torch.nn.Embedding(9,1)\n",
-        "        self.b2 = torch.nn.Embedding(8,1)\n",
-        "        self.sig = torch.nn.Sigmoid()\n",
-        "    def forward(self,X):\n",
-        "        X1,X2 = X[:,0],X[:,1]\n",
-        "        W_feature = self.ebdd1(X1)\n",
-        "        W_bias = self.b1(X1)\n",
-        "        M_feature = self.ebdd2(X2)\n",
-        "        M_bias = self.b2(X2)\n",
-        "        score = (W_feature * M_feature).sum(axis=1).reshape(-1,1) + W_bias + M_bias \n",
-        "        yhat = sig(score) * 5 \n",
-        "        return yhat"
-      ],
-      "id": "74dbc47f-1236-4030-b6f9-44814dee2696"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 61,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "net = Net()\n",
-        "loss_fn = torch.nn.MSELoss()\n",
-        "optimizr = torch.optim.Adam(net.parameters(),lr=0.1) # 이게 편해요!!\n",
-        "#--# \n",
-        "for epoc in range(100):\n",
-        "    # 1\n",
-        "    yhat = net(X) \n",
-        "    # 2\n",
-        "    loss = loss_fn(yhat,y)\n",
-        "    # 3 \n",
-        "    loss.backward()\n",
-        "    # 4 \n",
-        "    optimizr.step()\n",
-        "    optimizr.zero_grad()"
-      ],
-      "id": "0ecbec60-fc8a-433c-a6ce-3ba5a5b64d79"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 62,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "torch.concat([yhat.data,y],axis=1)[::5]"
-      ],
-      "id": "5527bfd7-36de-48bd-9258-c33f01547d50"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "(풀이2) – `net(X)`\n",
+        "\n",
         "# 5. NN-based 추천시스템\n",
         "\n",
         "## A. NN-based 방식\n",
         "\n",
         "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "42338064-3336-4d96-950a-fd6d7bb4aa95"
+      "id": "e558a5ce-232a-484c-a2ca-d90706d114ff"
     },
     {
       "cell_type": "code",
@@ -558,218 +461,11 @@
       "source": [
         "**소망**: NN-based 모델로 만들어 보고싶다.\n",
         "\n",
-        "(풀이1) – 실패"
-      ],
-      "id": "2a0794cb-1616-4d11-b3b6-6fa44397613e"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 65,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "class Net(torch.nn.Module):\n",
-        "    def __init__(self):\n",
-        "        super().__init__()\n",
-        "        #--#\n",
-        "        self.ebdd1 = torch.nn.Embedding(9,2)\n",
-        "        self.b1 = torch.nn.Embedding(9,1)\n",
-        "        self.ebdd2 = torch.nn.Embedding(8,2)\n",
-        "        self.b2 = torch.nn.Embedding(8,1)\n",
-        "        self.dnn = torch.nn.Sequential(\n",
-        "            torch.nn.Linear(6,1),\n",
-        "            torch.nn.Sigmoid()\n",
-        "        )   \n",
-        "    def forward(self,X1,X2):\n",
-        "        W_feature = self.ebdd1(X1)\n",
-        "        M_feature = self.ebdd2(X2)\n",
-        "        W_bias = self.b1(X1)\n",
-        "        M_bias = self.b2(X2)\n",
-        "        Z = torch.concat([W_feature,M_feature,W_bias,M_bias],axis=1)\n",
-        "        yhat = self.dnn(Z) * 5 \n",
-        "        return yhat"
-      ],
-      "id": "7103a280-dcc4-4d00-950e-fcac841f4312"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 66,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "net = Net()\n",
-        "loss_fn = torch.nn.MSELoss()\n",
-        "optimizr = torch.optim.Adam(net.parameters(),lr=0.1) # 이게 편해요!!\n",
-        "#--# \n",
-        "for epoc in range(100):\n",
-        "    # 1\n",
-        "    yhat = net(X1,X2) \n",
-        "    # 2\n",
-        "    loss = loss_fn(yhat,y)\n",
-        "    # 3 \n",
-        "    loss.backward()\n",
-        "    # 4 \n",
-        "    optimizr.step()\n",
-        "    optimizr.zero_grad()"
-      ],
-      "id": "db750148-e75a-49da-885a-73c1ecf1ea34"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 67,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "torch.concat([yhat.data,y],axis=1)[::5]"
-      ],
-      "id": "b3361aa2-94cc-4367-87ab-3564afea76a4"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "-   못하겠네?\n",
+        "(풀이1) – 실패\n",
         "\n",
-        "(풀이2) – 에라 모르겠다 깊은신경망.."
-      ],
-      "id": "5d677db7-cc29-4a08-9afb-c3f3e9c50c7f"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 68,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "class Net(torch.nn.Module):\n",
-        "    def __init__(self):\n",
-        "        super().__init__()\n",
-        "        #--#\n",
-        "        self.ebdd1 = torch.nn.Embedding(9,2)\n",
-        "        self.b1 = torch.nn.Embedding(9,1)\n",
-        "        self.ebdd2 = torch.nn.Embedding(8,2)\n",
-        "        self.b2 = torch.nn.Embedding(8,1)\n",
-        "        self.dnn = torch.nn.Sequential(\n",
-        "            torch.nn.Linear(6,15),\n",
-        "            torch.nn.ReLU(),\n",
-        "            torch.nn.Linear(15,15),\n",
-        "            torch.nn.ReLU(),\n",
-        "            torch.nn.Linear(15,1),\n",
-        "            torch.nn.Sigmoid()\n",
-        "        )   \n",
-        "    def forward(self,X1,X2):\n",
-        "        W_feature = self.ebdd1(X1)\n",
-        "        M_feature = self.ebdd2(X2)\n",
-        "        W_bias = self.b1(X1)\n",
-        "        M_bias = self.b2(X2)\n",
-        "        Z = torch.concat([W_feature,M_feature,W_bias,M_bias],axis=1)\n",
-        "        yhat = self.dnn(Z) * 5 \n",
-        "        return yhat"
-      ],
-      "id": "eb7b4c62-25c9-43b5-9c23-81023c731113"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 69,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "net = Net()\n",
-        "loss_fn = torch.nn.MSELoss()\n",
-        "optimizr = torch.optim.Adam(net.parameters(),lr=0.1) # 이게 편해요!!\n",
-        "#--# \n",
-        "for epoc in range(100):\n",
-        "    # 1\n",
-        "    yhat = net(X1,X2) \n",
-        "    # 2\n",
-        "    loss = loss_fn(yhat,y)\n",
-        "    # 3 \n",
-        "    loss.backward()\n",
-        "    # 4 \n",
-        "    optimizr.step()\n",
-        "    optimizr.zero_grad()"
-      ],
-      "id": "920d811c-844a-4e91-855a-ae8886407c7b"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 70,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "torch.concat([yhat.data,y],axis=1)[::5]"
-      ],
-      "id": "594c1a90-9ec1-47c6-ab15-fd8f6b050caf"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "-   잘 맞추긴했는데 불안함"
-      ],
-      "id": "d1c69506-503b-4102-aea6-4e06d5fedc00"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 71,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "df_view"
-      ],
-      "id": "1f0b7bb1-f025-4b90-8fb6-49070ed70cc6"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "(영자-다호), (보람-다호), (하니-영호) 를 예측해보자."
-      ],
-      "id": "c244903b-bf59-46c5-ba25-87a8ed53212c"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 72,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "XX1 = torch.tensor([1,7,8])\n",
-        "XX2 = torch.tensor([7,7,2])"
-      ],
-      "id": "bb83cd8a-6911-4b4d-a491-ac1f0dbceeba"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 73,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "net(XX1,XX2)"
-      ],
-      "id": "9e2ca08f-479d-4b43-91ce-eb1b0f8b47dd"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "그럴싸함.. (오버피팅 아닌듯)\n",
+        "(풀이2) – 에라 모르겠다 깊은신경망..\n",
+        "\n",
+        "(영자-다호), (보람-다호), (하니-영호) 를 예측해보자.\n",
         "\n",
         "## B. NCF (He et al. 2017)\n",
         "\n",
@@ -779,7 +475,7 @@
         "Tat-Seng Chua. 2017. “Neural Collaborative Filtering.” In *Proceedings\n",
         "of the 26th International Conference on World Wide Web*, 173–82."
       ],
-      "id": "34029244-2b59-4e9c-8f68-01b98d10d1a2"
+      "id": "601c7cec-5cd7-4f5c-bbef-62fa98a0fc7e"
     }
   ],
   "nbformat": 4,
