--- a/docs/posts/11wk-1.out.ipynb
+++ b/docs/posts/11wk-1.out.ipynb
@@ -15,7 +15,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "3d39d61d-46a2-43b3-9efc-95c9c9a7e6e7"
+      "id": "6446b6ba-63e0-40cc-8dd2-05fec7d50747"
     },
     {
       "cell_type": "code",
@@ -35,7 +35,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "7bdf104c-71b5-421c-96b3-dfaad6ed6a82"
+      "id": "13fb26a1-4786-464d-b233-88b3220e706e"
     },
     {
       "cell_type": "code",
@@ -62,7 +62,7 @@
         "`-` 모티브: `torch.nn.functional.one_hot` + `torch.nn.Linear` 를 매번\n",
         "쓰는건 너무 귀찮지 않어?"
       ],
-      "id": "616bfa64-aee2-4d1e-9d1d-3096dd28f8ac"
+      "id": "000af0a9-c3a0-4782-b560-ab1f50772e09"
     },
     {
       "cell_type": "code",
@@ -88,7 +88,7 @@
       "source": [
         "`-` 코드를 뜯어보면.."
       ],
-      "id": "0e99f409-5bd3-4390-89e4-934e999997e6"
+      "id": "b1d18294-18d9-4088-948d-6a58aa0063c9"
     },
     {
       "cell_type": "code",
@@ -125,7 +125,7 @@
         "`-` `torch.nn.functional.one_hot` + `torch.nn.Linear` 를 함께처리해주는\n",
         "레이어 `torch.nn.Embedding` 존재"
       ],
-      "id": "e0ae70dd-9a5c-4406-824b-7ef76509efbf"
+      "id": "a62fe861-771d-49ed-abd3-460fd2e238a1"
     },
     {
       "cell_type": "code",
@@ -168,7 +168,7 @@
         "`# 의문`: 그냥 원핫인코딩없이 바로 선형변환하면 안되나? (= 꼭\n",
         "임베딩레이어를 써야하나?)"
       ],
-      "id": "b4b95f4d-e23a-4c18-a7e4-6d007ed65721"
+      "id": "2aac6330-4960-4739-9e0c-cf26e01ba152"
     },
     {
       "cell_type": "code",
@@ -220,7 +220,7 @@
         "\n",
         "`-` 수식의 차이: 비슷해보이지만 계산방식이 조금 다름"
       ],
-      "id": "b5683d38-7c7b-4331-bb4e-567b9aa3d4f9"
+      "id": "2ce1f7de-7ec5-41d7-a4f3-fe6beccb9212"
     },
     {
       "cell_type": "code",
@@ -268,7 +268,7 @@
         "\n",
         "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "ad83ba06-5fa9-42f8-b6a1-204f9191ee1d"
+      "id": "04feedcb-1d7e-49ae-bb8d-1beee158cba8"
     },
     {
       "cell_type": "code",
@@ -308,7 +308,7 @@
         "\n",
         "(풀이)"
       ],
-      "id": "ab544d4d-568d-4e28-8ad5-91847d45dcf0"
+      "id": "1ce0ef21-2604-49cd-8099-1c3fc840e3b9"
     },
     {
       "cell_type": "code",
@@ -368,7 +368,7 @@
         "\n",
         "`# 예비학습1`: `net(x)`와 사실 `net.forward(x)`는 같다."
       ],
-      "id": "a89f4589-3ca5-4f0f-aeda-337696a9e46f"
+      "id": "958b2e37-0ad6-4b24-b41c-e58d76fea86e"
     },
     {
       "cell_type": "code",
@@ -428,7 +428,7 @@
       "source": [
         "그래서 `net.forward`를 재정의하면 `net(x)`의 기능을 재정의 할 수 있다."
       ],
-      "id": "ff1a1538-b336-416c-8260-c087d14d5012"
+      "id": "95b11355-26e6-4ae7-87ad-87539a23755d"
     },
     {
       "cell_type": "code",
@@ -452,7 +452,7 @@
         "    `net.forward(x)`, `net(x)` 도 입력값에 상관없이 항상 ’메롱’을\n",
         "    출력하게 될것임"
       ],
-      "id": "5cb772a0-5ca1-4a4c-9a66-3f5ab8ade0c9"
+      "id": "104754db-f379-4e66-b8eb-ad48a4fc451f"
     },
     {
       "cell_type": "code",
@@ -490,7 +490,7 @@
         "\n",
         "(예시1)"
       ],
-      "id": "19b36470-0736-4588-9952-2461f087f25e"
+      "id": "5b7daea7-ad24-41dd-83f2-421397b73953"
     },
     {
       "cell_type": "code",
@@ -534,7 +534,7 @@
         "\n",
         "(예시2)"
       ],
-      "id": "406388d1-e66b-46a4-bff1-2f2dc4c0aaae"
+      "id": "50084466-05a3-4c73-81ba-cac6ce3753b2"
     },
     {
       "cell_type": "code",
@@ -644,7 +644,7 @@
         "\n",
         "`# 실습`: 사용자정의 네트워크를 사용하여 아래의 자료를 학습해보자."
       ],
-      "id": "c15adaed-c620-4e95-9393-ded04ede620d"
+      "id": "817608b2-39f0-4da1-95aa-10d460865fbd"
     },
     {
       "cell_type": "code",
@@ -688,7 +688,7 @@
       "source": [
         "(풀이)"
       ],
-      "id": "b4283d8a-0834-47ca-ac41-888e859a1179"
+      "id": "695840ff-522c-4166-94f5-22a0a71267ab"
     },
     {
       "cell_type": "code",
@@ -800,7 +800,7 @@
         "\n",
         "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "2f22468f-b4de-44d5-887e-12d74e6e1d52"
+      "id": "526c2b62-b911-4199-ac58-962e93c4fd2f"
     },
     {
       "cell_type": "code",
@@ -838,9 +838,9 @@
       "source": [
         "사용자정의 네트워크를 이용하여 MF-based 추천시스템을 설계하라.\n",
         "\n",
-        "(풀이1)"
+        "(풀이1) – `net(X1,X2)`"
       ],
-      "id": "48ac56c8-2bc9-4c66-b28f-3efa2647e570"
+      "id": "ad5a07d8-cca1-4341-9c4b-9fce4d663bb1"
     },
     {
       "cell_type": "code",
@@ -911,9 +911,9 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "(풀이2)"
+        "(풀이2) – `net(X)`"
       ],
-      "id": "2367c28c-3d95-4c60-a70d-ebdbccc67be2"
+      "id": "bd74ec1b-0f42-4bf1-a9b0-8efedcac1bc9"
     },
     {
       "cell_type": "code",
@@ -1016,7 +1016,7 @@
         "\n",
         "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "50ccbf63-3e2e-4a45-b23b-2210a2a31c11"
+      "id": "0c42bd9c-2b84-4811-879c-0d09e4861fe4"
     },
     {
       "cell_type": "code",
@@ -1056,7 +1056,7 @@
         "\n",
         "(풀이1) – 실패"
       ],
-      "id": "a680dc62-d945-455d-8765-52dad22f4359"
+      "id": "7dd906ec-f6bc-40d4-995a-ec78b6be2cff"
     },
     {
       "cell_type": "code",
@@ -1134,7 +1134,7 @@
         "\n",
         "(풀이2) – 에라 모르겠다 깊은신경망.."
       ],
-      "id": "796f7e94-a55f-41a6-a828-7f901fca2a5a"
+      "id": "b1f502e7-c2e7-4c14-b882-58c6292e1265"
     },
     {
       "cell_type": "code",
@@ -1215,7 +1215,7 @@
       "source": [
         "-   잘 맞추긴했는데 불안함"
       ],
-      "id": "1799bb2f-2c13-4f76-861c-ef903bc27c7c"
+      "id": "0372ac69-ffa1-4b7c-b52a-1161fdaf8942"
     },
     {
       "cell_type": "code",
@@ -1235,7 +1235,7 @@
       "source": [
         "(영자-다호), (보람-다호), (하니-영호) 를 예측해보자."
       ],
-      "id": "f22457e4-29e1-4356-8d21-409f3f3ecfe6"
+      "id": "f726ce96-5678-4010-9327-7b1b6855fbd3"
     },
     {
       "cell_type": "code",
@@ -1276,7 +1276,7 @@
         "Tat-Seng Chua. 2017. “Neural Collaborative Filtering.” In *Proceedings\n",
         "of the 26th International Conference on World Wide Web*, 173–82."
       ],
-      "id": "46dfd66c-05a1-48fd-a12c-8378de135d50"
+      "id": "0c59c8bb-9136-4245-a547-dd1391c9eb2e"
     }
   ],
   "nbformat": 4,
