--- a/docs/posts/11wk-1.out.ipynb
+++ b/docs/posts/11wk-1.out.ipynb
@@ -15,7 +15,7 @@
         "\n",
         "# 1. 강의영상"
       ],
-      "id": "6446b6ba-63e0-40cc-8dd2-05fec7d50747"
+      "id": "aee432f9-3a16-4aef-9af3-62c8b6cbaeb4"
     },
     {
       "cell_type": "code",
@@ -35,7 +35,7 @@
       "source": [
         "# 2. Imports"
       ],
-      "id": "13fb26a1-4786-464d-b233-88b3220e706e"
+      "id": "c76d8708-f923-4c72-8223-1e945fa18663"
     },
     {
       "cell_type": "code",
@@ -62,7 +62,7 @@
         "`-` 모티브: `torch.nn.functional.one_hot` + `torch.nn.Linear` 를 매번\n",
         "쓰는건 너무 귀찮지 않어?"
       ],
-      "id": "000af0a9-c3a0-4782-b560-ab1f50772e09"
+      "id": "a2cc9fa3-191f-4197-8730-9ff1ec9fa989"
     },
     {
       "cell_type": "code",
@@ -88,7 +88,7 @@
       "source": [
         "`-` 코드를 뜯어보면.."
       ],
-      "id": "b1d18294-18d9-4088-948d-6a58aa0063c9"
+      "id": "f8316b7f-2c5c-470c-9cc2-39d113583b4c"
     },
     {
       "cell_type": "code",
@@ -125,7 +125,7 @@
         "`-` `torch.nn.functional.one_hot` + `torch.nn.Linear` 를 함께처리해주는\n",
         "레이어 `torch.nn.Embedding` 존재"
       ],
-      "id": "a62fe861-771d-49ed-abd3-460fd2e238a1"
+      "id": "7b644f7b-bf13-42bc-8571-45cd54234a72"
     },
     {
       "cell_type": "code",
@@ -168,7 +168,7 @@
         "`# 의문`: 그냥 원핫인코딩없이 바로 선형변환하면 안되나? (= 꼭\n",
         "임베딩레이어를 써야하나?)"
       ],
-      "id": "2aac6330-4960-4739-9e0c-cf26e01ba152"
+      "id": "7bf6c244-721f-4040-8888-89abe1718e6c"
     },
     {
       "cell_type": "code",
@@ -220,7 +220,7 @@
         "\n",
         "`-` 수식의 차이: 비슷해보이지만 계산방식이 조금 다름"
       ],
-      "id": "2ce1f7de-7ec5-41d7-a4f3-fe6beccb9212"
+      "id": "d909a3e4-039b-4c73-800d-619d202424e6"
     },
     {
       "cell_type": "code",
@@ -247,18 +247,24 @@
         "“옥순”,“영숙”,“하니”가 가지는 어떠한 특징이었음 (예를들면 매력같은).\n",
         "데이터를 상상하며 위의 결과를 다시 해석해보자.\n",
         "\n",
-        "-   옥순이 가지는 어떠한 특징 (-0.8470 혹은 -0.8178) 을 바꾸고 싶다면?\n",
-        "    `ebdd`의 경우 -0.8178 이라는 숫자를 조정하면 된다. 이 조정은 옥순의\n",
-        "    특징만 바꾸며 영숙과 하니의 특징은 바꾸지 않는다. 반면 `linr`의 경우\n",
-        "    -0.3467 혹은 -0.8470 을 조정하면 되는데, 이는 옥순의 특징을 바꿈과\n",
-        "    동시에 영숙과 하니의 특징까지 같이 바꾼다. 하니, 혹은 영숙이 가지는\n",
-        "    특징을 바꾸고 싶을 경우도 마찬가지 현상이 일어남.\n",
-        "-   만약에 출연자가 1000명이라면 `linr`그 1000명의 특징을 단 2개의\n",
-        "    파라메터로 조정해야한다. (그리고 하나를 바꾸면 999명이 같이 바뀐다)\n",
-        "    하지만 `ebdd`는 1000개의 특징을 조정할 수 있는 1000개의 파라메터를\n",
+        "**옥순이 가지는 어떠한 특징 (-0.8470 혹은 -0.8178) 을 바꾸고 싶다면?**\n",
+        "\n",
+        "-   `ebdd`의 경우: `ebdd.weigth`에 있는 -0.8178 이라는 숫자를 조정하면\n",
+        "    된다. 이 조정은 옥순의 특징만 바꾸며 영숙과 하니의 특징은 바꾸지\n",
+        "    않는다. (개별조정이 쉬움)\n",
+        "-   `linr`의 경우: `linr.weight`에 있는 -0.3467 혹은 `linr.bias`에 있는\n",
+        "    -0.8470 을 조정하면 되는데, 이를 조정하면 옥순의 특징을 바꿈과\n",
+        "    동시에 영숙/하니의 특징까지 같이 바뀌게 된다. (개별조정이 어려움)\n",
+        "\n",
+        "**만약에 출연자가 1000명이라면??**\n",
+        "\n",
+        "-   `linr`의 경우: 1000명의 특징을 단 2개의 파라메터로 조정해야한다.\n",
+        "    (그리고 한명의 특징을 바꾸면 999명의 특징이 같이 바뀐다, 개별조정은\n",
+        "    애초에 가능하지 않음.)\n",
+        "-   `ebdd`의 경우: 1000개의 특징을 조정할 수 있는 1000개의 파라메터를\n",
         "    확보할 수 있게 된다.\n",
         "\n",
-        "`-` 결론: ebdd가 더 파라메터 조정을 통하여 특징을 학습하기 용이하다.\n",
+        "`-` 결론: ebdd가 더 파라메터 미세조정을 통하여 특징을 학습하기 용이하다.\n",
         "(독립적으로 특징값을 줄 수 있으니까!)\n",
         "\n",
         "> 만약에 문자열이 “최우수(A)”, “우수(B)”, “보통(C)”, “미흡(D)”,\n",
@@ -268,11 +274,11 @@
         "\n",
         "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "04feedcb-1d7e-49ae-bb8d-1beee158cba8"
+      "id": "0e84cca0-b77b-45e6-bba7-e2fa78200dbc"
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 115,
       "metadata": {
         "tags": []
       },
@@ -285,7 +291,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 116,
       "metadata": {
         "tags": []
       },
@@ -308,7 +314,7 @@
         "\n",
         "(풀이)"
       ],
-      "id": "1ce0ef21-2604-49cd-8099-1c3fc840e3b9"
+      "id": "026fb650-3d6d-4464-951c-5132697db698"
     },
     {
       "cell_type": "code",
@@ -368,7 +374,7 @@
         "\n",
         "`# 예비학습1`: `net(x)`와 사실 `net.forward(x)`는 같다."
       ],
-      "id": "958b2e37-0ad6-4b24-b41c-e58d76fea86e"
+      "id": "3b9331ac-d5bd-496a-a393-7549f2b764f9"
     },
     {
       "cell_type": "code",
@@ -428,7 +434,7 @@
       "source": [
         "그래서 `net.forward`를 재정의하면 `net(x)`의 기능을 재정의 할 수 있다."
       ],
-      "id": "95b11355-26e6-4ae7-87ad-87539a23755d"
+      "id": "7ce543d2-dde7-4a4a-a0a5-70838d5f15db"
     },
     {
       "cell_type": "code",
@@ -452,7 +458,7 @@
         "    `net.forward(x)`, `net(x)` 도 입력값에 상관없이 항상 ’메롱’을\n",
         "    출력하게 될것임"
       ],
-      "id": "104754db-f379-4e66-b8eb-ad48a4fc451f"
+      "id": "6a720f32-e954-4162-8ac1-88ff4aac25bd"
     },
     {
       "cell_type": "code",
@@ -490,7 +496,7 @@
         "\n",
         "(예시1)"
       ],
-      "id": "5b7daea7-ad24-41dd-83f2-421397b73953"
+      "id": "2dad0721-3fe8-4d97-b83c-5d945c950677"
     },
     {
       "cell_type": "code",
@@ -534,7 +540,7 @@
         "\n",
         "(예시2)"
       ],
-      "id": "50084466-05a3-4c73-81ba-cac6ce3753b2"
+      "id": "1091b183-00c4-413b-9c7d-e2c6e30cb4ae"
     },
     {
       "cell_type": "code",
@@ -595,9 +601,11 @@
         "        return yhat\n",
         "```\n",
         "\n",
-        "-   net(X)에 사용하는 X임, yhat은 net.forward(X) 함수의 리턴값임\n",
-        "-   사실, X/yhat은 다른 변수로 써도 무방하나 (예를들면 input/output\n",
-        "    이라든지, netin/netout 이라든지) 설명의 편의상 X와 yhat을 고정한다.\n",
+        "-   `forward`의 입력: `X`는 `net(X)`에 사용하는 `X`임\n",
+        "-   `forward`의 출력: `yhat`은 `net.forward(X)` 함수의 리턴값임\n",
+        "-   사실, `X`/`yhat`은 다른 변수로 써도 무방하나 (예를들면\n",
+        "    `input`/`output` 이라든지, `netin`/`netout` 이라든지) 설명의 편의상\n",
+        "    `X`와 `yhat`을 고정한다.\n",
         "\n",
         "**step2:** `def __init__(self):`에 yhat을 구하기 위해 필요한 재료를\n",
         "레이어를 정의하고 이름을 붙인다. 이름은 항상 `self.xxx` 와 같은 식으로\n",
@@ -644,7 +652,7 @@
         "\n",
         "`# 실습`: 사용자정의 네트워크를 사용하여 아래의 자료를 학습해보자."
       ],
-      "id": "817608b2-39f0-4da1-95aa-10d460865fbd"
+      "id": "4c9131c9-5053-4041-86e7-3082542d40d1"
     },
     {
       "cell_type": "code",
@@ -688,7 +696,7 @@
       "source": [
         "(풀이)"
       ],
-      "id": "695840ff-522c-4166-94f5-22a0a71267ab"
+      "id": "66876d7d-213d-4226-b151-2b8d0ac820e6"
     },
     {
       "cell_type": "code",
@@ -800,7 +808,7 @@
         "\n",
         "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "526c2b62-b911-4199-ac58-962e93c4fd2f"
+      "id": "de0421e3-839e-4f14-be92-bc4e87a7f192"
     },
     {
       "cell_type": "code",
@@ -840,7 +848,7 @@
         "\n",
         "(풀이1) – `net(X1,X2)`"
       ],
-      "id": "ad5a07d8-cca1-4341-9c4b-9fce4d663bb1"
+      "id": "5ea50fcb-cba5-49e4-8894-c39cbf874e71"
     },
     {
       "cell_type": "code",
@@ -913,7 +921,7 @@
       "source": [
         "(풀이2) – `net(X)`"
       ],
-      "id": "bd74ec1b-0f42-4bf1-a9b0-8efedcac1bc9"
+      "id": "4ae5d97e-99cb-42bc-9b82-213b8e3dcdb3"
     },
     {
       "cell_type": "code",
@@ -1016,7 +1024,7 @@
         "\n",
         "아래의 자료를 활용하여 추천시스템을 설계하고자한다."
       ],
-      "id": "0c42bd9c-2b84-4811-879c-0d09e4861fe4"
+      "id": "00078823-3f03-42bc-aa75-1d6827d345b1"
     },
     {
       "cell_type": "code",
@@ -1056,7 +1064,7 @@
         "\n",
         "(풀이1) – 실패"
       ],
-      "id": "7dd906ec-f6bc-40d4-995a-ec78b6be2cff"
+      "id": "8d800270-47b9-4c01-b259-e37d8ad1e8d6"
     },
     {
       "cell_type": "code",
@@ -1134,7 +1142,7 @@
         "\n",
         "(풀이2) – 에라 모르겠다 깊은신경망.."
       ],
-      "id": "b1f502e7-c2e7-4c14-b882-58c6292e1265"
+      "id": "aef9e304-8a4b-43b6-b48b-91fc09ec2a05"
     },
     {
       "cell_type": "code",
@@ -1215,7 +1223,7 @@
       "source": [
         "-   잘 맞추긴했는데 불안함"
       ],
-      "id": "0372ac69-ffa1-4b7c-b52a-1161fdaf8942"
+      "id": "2aa623e2-7a09-47ac-b886-285f3140a5df"
     },
     {
       "cell_type": "code",
@@ -1235,7 +1243,7 @@
       "source": [
         "(영자-다호), (보람-다호), (하니-영호) 를 예측해보자."
       ],
-      "id": "f726ce96-5678-4010-9327-7b1b6855fbd3"
+      "id": "f862dc7a-c3a9-49d8-a307-50f88df2cf4f"
     },
     {
       "cell_type": "code",
@@ -1276,7 +1284,7 @@
         "Tat-Seng Chua. 2017. “Neural Collaborative Filtering.” In *Proceedings\n",
         "of the 26th International Conference on World Wide Web*, 173–82."
       ],
-      "id": "0c59c8bb-9136-4245-a547-dd1391c9eb2e"
+      "id": "60e10835-9b61-4cc2-917f-1f58487322a1"
     }
   ],
   "nbformat": 4,
